@@ -29,7 +29,6 @@ Before 1.0 little stuff
 -----------------------
 
  o separate debug info stuff
- o debian build stuff
  o opgprof always merges even if we provide a profile spec that's minimal
    enough - you can't get "cpu:0"
  o we're not following symlinks for opreport etc. binary resolving. FIXED 
@@ -55,11 +54,10 @@ Before 1.0 little stuff
  o oprof_start: check lib samples when kernel samples checkbox is checked
  o mask SIGTERM over critical daemon operations that could corrupt sample files
  o pp tools must handle samples count overflow (marked as (unsigned)-1)
- o daemon needs setrlimit(RLIMIT_NOFILE, ...)
  o when we dump stats for oprofiled, dump kernel-side values too (for 2.5)
  o lookup_dcookie can return ENAMETOOLONG but we can't hack it
-   - a C++ rewrite can handle this, and also the rlimit problem via caching name id's
-     and opening when necessary etc.
+ o daemon needs to handle -EMFILE failures in all files opened (including
+   complete_dump !) by closing sample files
  o remove 2.2 / gcc 2.91 support ?
  o the way we show kernel modules in 2.5 is not very obvious - "/oprofile"
  o gcc-cvs -include stdc++ doesn't use precompiled header, when it'll work
