@@ -35,10 +35,12 @@
 #endif
 #include "op_cpufreq.h"
 
-#include <unistd.h>
-#include <signal.h>
 #include <sys/types.h>
 #include <sys/stat.h>
+#include <sys/time.h>
+#include <sys/resource.h>
+#include <unistd.h>
+#include <signal.h>
 #include <dirent.h>
 #include <fcntl.h>
 #include <errno.h>
@@ -250,11 +252,12 @@ static void opd_options(int argc, char const * argv[])
 /** Done writing out the samples, indicate with complete_dump file */
 static void complete_dump()
 {
+	// FIXME: handle -EMFILE
 	FILE * status_file = fopen(OP_DUMP_STATUS, "w");
 
 	if (!status_file) {
-		fprintf(stderr, "Couldn't set %s !\n", OP_DUMP_STATUS);
-		exit(EXIT_FAILURE);
+		perror("warning: couldn't set complete_dump: ");
+		return;
 	}
 
         fprintf(status_file, "1\n");
@@ -460,6 +463,8 @@ int main(int argc, char const * argv[])
 	char * sbuf;
 	size_t s_buf_bytesize;
 	int i;
+	int err;
+	struct rlimit rlim = { 8192, 8192 };
 
 	opd_options(argc, argv);
 
@@ -476,7 +481,7 @@ int main(int argc, char const * argv[])
 	opd_write_abi();
 
 	if (atexit(clean_exit)) {
-		fprintf(stderr, "Couldn't set exit cleanup !\n");
+		perror("oprofiled: couldn't set exit cleanup: ");
 		exit(EXIT_FAILURE);
 	}
 
@@ -490,6 +495,11 @@ int main(int argc, char const * argv[])
 
 	setup_signals();
  
+	err = setrlimit(RLIMIT_NOFILE, &rlim);
+	if (err) {
+		perror("warning: could not set RLIMIT_NOFILE to 8192: ");
+	}
+
 	if (op_write_lock_file(OP_LOCK_FILE)) {
 		fprintf(stderr, "oprofiled: could not create lock file "
 			OP_LOCK_FILE "\n");
